static/css/main.css
/* ... */
.microblog_book {
    border-radius: 0;
    margin: 2.4rem 0 0 2rem !important;
    border: 1px solid var(--accent-2);
    object-fit: contain;
    float: right;
    text-align: right;
    max-width: 7rem !important;
}

div.e-content .microblog_book {
    margin-top: 0 !important;
}

img.bookshelf__cover {
    border-radius: 0;
}

@media only screen and (max-width: 768px) {
    body {
        line-height: 1.5111;
        overscroll-behavior: contain;
    }

    .header {
        margin: 0;
    }

    .site-title {
        font-size: 1.8rem;
    }

    .site-nav {
        background: var(--background);
        font-size: 2rem;
    }

    .site-nav ul {
        height: 100dvh;
        justify-content: start;
        padding: 4rem 0;
    }

    .nav-menu {
        background-color: var(--background);
        border-radius: 0;
        flex-direction: column;
        height: 100dvh;
        left: -100%;
        overflow: hidden;
        position: fixed;
        text-align: center;
        top: 0;
        transition: 0.3s;
        width: 100%;
        z-index: 10000;
    }

    .nav-menu.active {
        left: 0;
        margin: 0;
        padding: 10rem 0;
        top: 0;
    }

    .nav-item {
        margin: 1.5rem 0;
    }

    .hamburger {
        cursor: pointer;
        display: block;
        z-index: 10010;
    }

    .hamburger.active {
        position: fixed;
        right: 20px;
        top: 20px;
    }

    body.menu-open .site-title {
        position: fixed;
        left: 20px;
        top: 20px;
        z-index: 10010;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(5px) rotate(45deg);
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-5px) rotate(-45deg);
    }

    .pinned {
        margin-left: -1rem;
        margin-right: -1rem;
        width: calc(100% + 2rem);
    }

    .to-top {
        opacity: 100%;
    }

    input.subscribe-input {
        width: 100%;
    }

    input.subscribe-submit {
        padding: 9px;
        width: 100%;
    }
}

